--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 
-		<input type="text" name="" id="enter-text"><br>
+		<input type="text" name="" id="enter-text"><br><br>
 		<div id="result"></div><br>
 		<button type="button" id="submit">Submit!</button>
 
